<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/form_edit_action"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.EditActionActivity">

    <ProgressBar
        android:id="@+id/progress_horizontal_edit_action"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        tools:visibility="visible" />

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="true"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_horizontal_edit_action">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guia_izq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/activity_vertical_margin" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guia_der"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="42dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_end="@dimen/activity_vertical_margin" />


            <ImageView
                android:id="@+id/iv_icon_spanish"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/ICONO_ACCION_ESPANOL"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@+id/il_action_spanish"
                app:layout_constraintStart_toStartOf="@+id/guia_izq"
                app:layout_constraintTop_toTopOf="@+id/il_action_spanish"
                app:srcCompat="@drawable/ic_language_black_24dp"
                app:tint="@color/colorSecondaryVariant" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_action_spanish"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/ACCION_ESPANOL"
                app:endIconDrawable="@drawable/ic_clear_text_black_24dp"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toStartOf="@+id/guia_der"
                app:layout_constraintStart_toEndOf="@+id/iv_icon_spanish"
                app:layout_constraintTop_toBottomOf="@+id/tv_instruction">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_action_spanish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:inputType="textMultiLine|textCapSentences"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/iv_icon_english"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/ICONO_ACCION_INGLES"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@+id/il_action_english"
                app:layout_constraintStart_toStartOf="@+id/guia_izq"
                app:layout_constraintTop_toBottomOf="@+id/il_action_spanish"
                app:srcCompat="@drawable/ic_language_black_24dp"
                app:tint="@color/colorSecondaryVariant" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_action_english"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:hint="@string/ACCION_INGLES"
                app:endIconDrawable="@drawable/ic_clear_text_black_24dp"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toStartOf="@+id/guia_der"
                app:layout_constraintStart_toEndOf="@+id/iv_icon_spanish"
                app:layout_constraintTop_toBottomOf="@+id/il_action_spanish">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_action_english"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:inputType="textMultiLine|textCapSentences"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_instruction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/INTRUCCION_ACCION"
                app:layout_constraintEnd_toStartOf="@+id/guia_der"
                app:layout_constraintStart_toStartOf="@+id/guia_izq"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>