...
    <string name="TITULO_TOOLBAR_LISTA_ENTREVISTAS">Interviews List</string>
    <string name="TITULO_TOOLBAR_EDITAR_PERFIL">Edit Profile</string>
    <string name="TITULO_TOOLBAR_CONTACTO">Contact us</string>
    <string name="TITULO_TOOLBAR_EDITAR_EVENTO">Edit Event</string>
    <string name="TITULO_TOOLBAR_LISTADO_INVESTIGADORES">Researchers list</string>
    <string name="TITULO_TOOLBAR_LISTADO_ACCIONES">Actions List</string>
    <string name="TITULO_TOOLBAR_NUEVA_ACCION">New Action</string>
    <string name="TITULO_TOOLBAR_EDITAR_ACCION">Edit Action</string>
    <string name="TITULO_TABLEAU" translatable="false">Tableau</string>

    <!-- SHARED PREF KEYS-->
    <string name="SHARED_PREF_MASTER_KEY" translatable="false">udelvd</string>
    <string name="SHARED_PREF_INVES_ID" translatable="false">id_investigador</string>
...
    <string name="MENU_CERRAR_SESION">Log out</string>
    <string name="MENU_GENERAL">General</string>
    <string name="MENU_MI_PERFIL">My profile</string>
    <string name="MENU_LISTA_ENTREVISTADOS">Interviewees</string>
    <string name="MENU_ESTADISTICAS">Statistics</string>
    <string name="MENU_CONFIGURACION">Configuration</string>
    <string name="MENU_GUARDAR_DATOS">Save</string>
    <string name="MENU_ENTREVISTA_VER_EVENTO">Show events</string>
    <string name="MENU_ENTREVISTA_EDITAR">Edit interview</string>
    <string name="MENU_ENTREVISTA_ELIMINAR">Delete interview</string>
    <string name="MENU_PERFIL_EDITAR">Edit profile</string>
    <string name="MENU_CONDICIONES">Conditions and privacy</string>
    <string name="MENU_CONTACTENOS">Contact us</string>
    <string name="MENU_ADMIN">Admin</string>
    <string name="MENU_ACCIONES">Actions</string>
    <string name="MENU_EMOTICONES">Emoticons</string>
    <string name="MENU_INVESTIGADORES">Researchers</string>
    <string name="MENU_ACCION_EDITAR">Edit action</string>
    <string name="MENU_ACCION_ELIMINAR">Delete action</string>
    <string name="MENU_BUSCAR">Search</string>

    <!-- SNACKLBAR -->
    <string name="SNACKBAR_REINTENTAR">Retry</string>
    <string name="SNACKBAR_SOLICITAR_RECUPERACION">Request new</string>
...
    <string name="OLVIDAR_CONTRASEÑA">Forgot password?</string>
    <string name="INTRUCCIONES_RECUPERACION">Enter your email to send you account recovery instructions</string>
    <string name="REGISTRAR">Register</string>
    <string name="NUEVA_CONTRASEÑA">New password</string>
    <string name="NUEVA_PASS_INTRUCCIONES">Please, enter a new password</string>
    <string name="FECHA_REGISTRO_ENTREVISTA">Registry date</string>
    <string name="ICONO_MENU_CONTEXTUAL">Contextual menu icon</string>
    <string name="MSG_LISTADO_ENTREVISTADOS_VACIO">You don\'t have interviewees yet</string>
    <string name="EMOTICON">Emoticon</string>
    <string name="EMOTICON_EVENTO">Event emoticon</string>
    <string name="GUION" translatable="false">-</string>
    <string name="CARGAR_MAS">Load more</string>
    <string name="EMOTICON_SPINNER">Dropdown menu emoticon</string>
...
